Stopped date picker from shrinking too much

--- a/src/packages/admin-ui-components/src/date-picker/styles.module.css
+++ b/src/packages/admin-ui-components/src/date-picker/styles.module.css
@@ -1,5 +1,6 @@
 .container {
-	flex: 1;
+	flex-shrink: 0;
+	flex-grow: 1;
 }
 
 .inputSelector {
